--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
 		"svelte": "^5.0.0",
 		"vite": "^6.2.6",
 		"vite-plugin-devtools-json": "^0.2.0"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.10",
+		"tailwindcss": "^4.1.10"
 	}
 }
