--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://inlang.com/schema/project-settings",
-  "baseLocale": "en",
+  "baseLocale": "es",
   "locales": [
     "en",
-    "de"
+    "es"
   ],
   "modules": [
     "https://cdn.jsdelivr.net/npm/@inlang/plugin-message-format@4/dist/index.js",
