--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.523.0",
 		"@tailwindcss/vite": "^4.1.10",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-svelte": "^8.6.0",
 		"tailwindcss": "^4.1.10"
 	}
 }
