--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@inlang/cli": "^3.0.0",
 		"@inlang/paraglide-js": "2.1.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"eslint": "^9.18.0",
